# audai

./: .env.template  .gitignore  README.md  audai.bat  pyproject.toml
__main__.dist/: _wmi.pyd  unicodedata.pyd
src/audai/: __init__.py  __main__.py  audio_utils.py  cli.py  config.py
src/audai/commands/: __init__.py  talk.py  tts.py  whisper.py
