[project]
name = "audai"
version = "0.1.0"
description = "AI Audio CLI - TTS, Whisper, and Audio-to-Audio conversation tool"
authors = [
    { name = "Chophe", email = "chophe@yahoo.com" }
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyaudio>=0.2.11",
    "pydub>=0.25.1",
    "requests>=2.31.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "keyboard>=0.13.5",
    "playsound>=1.3.0"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/audai"]

[project.scripts]
audai = "audai.cli:app"
