[project]
name = "audai"
version = "0.1.0"
description = "AI Audio CLI - TTS, Whisper, and Audio-to-Audio conversation tool"
authors = [
    { name = "Chophe", email = "chophe@yahoo.com" }
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "keyboard>=0.13.5",
    "pyaudio>=0.2.11",
    "pydub>=0.25.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "keyboard>=0.13.5",
    "nuitka>=2.7.14",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["nuitka>=1.8"]
build-backend = "nuitka.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/audai"]

[project.scripts]
audai = "audai.cli:main_cli"
nuitka-build = "nuitka.__main__:main --standalone --onefile src/audai/__main__.py"

[tool.nuitka]
standalone = true       # include Python interpreter + dependencies
onefile = true          # bundle into single exe
output-dir = "dist"     # directory for exe
lto = true              # optional speed optimization
nofollow-import-to = ["tkinter"]  # optional to reduce size
main-script = "src/audai/__main__.py"
